syntax = "proto3";

package auth;

option go_package = "newservice/grpc/genproto";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);

  // Методы для работы с jwt
  rpc Validate(ValidateRequest) returns (ValidateResponse);
  rpc NewJwt(NewJwtRequest) returns (NewJwtResponse);
  rpc RevokeJwt(RevokeJwtRequest) returns (RevokeJwtResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message ValidateRequest {
  string access_token = 1;
}

message ValidateResponse {
  string user_id = 1;
}

message NewJwtRequest {
  string user_id = 1;
}

message NewJwtResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RevokeJwtRequest {
  string user_id = 1;
}

message RevokeJwtResponse {}

message RefreshRequest{
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
}

